--- a/index.html
+++ b/index.html
@@ -6,18 +6,32 @@
     <link rel="icon" href="img/hpbdcake.png" type="image/png">
     <title> Happy Birthday !</title>
     <link rel="stylesheet" href="style.css"/>
-
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
 </head>
 <body>
-    <canvas id=c></canvas>
-    <script src="script.js"></script>
-    <div class="container">
-        <img src="img/hpbdcake.png" alt="Cinque Terre" width="100" height="100">
+    <div class='birthday'>
+        <div class='birthday_inner'>
+          <div class='birthday_inner__modal'>
+            <div class='modal_image'>
+              <img src='/'>
+            </div>
+          </div>
+          <div class='birthday_inner__stage stage1'>
+            <div class='intro_cake'>
+              <img class='intro' src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/217233/cake.png'>
+            </div>
+            <button class='start'><p id="hpbd"></p></button>
+          </div>
+            <div>
+              <audio controls autoplay loop>
+                <source src="audio/sinh nhat cua sinh nhat.mp3" type="audio/mpeg">
+                <source src="*" type="audio/ogg">
+              </audio>
+            </div>
+        </div>
     </div>
-    <p id="demo"></p>
-    
-
+  <script src="script.js"></script>
 </body>
 </html>
+
